[project]
name = "yahtzee-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.44.1",
    "gymnasium>=1.1.1",
    "matplotlib>=3.3.0",
    "numpy>=1.20.0",
    "tensorboard>=2.12.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
    "wandb>=0.12.0",
]

[tool.ruff]
line-length = 70
